--- a/ClientApp/src/app/custom-bulk-update/custom-bulk-update.component.html
+++ b/ClientApp/src/app/custom-bulk-update/custom-bulk-update.component.html
@@ -1,5 +1,12 @@
 <div class="container">
-    <h3>Custom Bulk Update</h3>
+    <div class="col-md-4 form-group"style="padding-left:0px;">
+        <label for="grpNum">Group Number</label>
+        <select class="select-dropdown form-control" id="grpNum"  name="grpNum">
+        <option selected>Select</option>
+            <option value="22345">22345</option>
+            <option value="12345">12345</option>
+        </select>
+    </div>
     <div id="accordion" class="accordion">
         <div class="card mt-2" style="cursor: pointer;">
             <div class="card-header collapsed mb-2" data-toggle="collapse" href="#collapseOne">
@@ -25,21 +32,21 @@
                         <td>Employee Question 1</td>
                         <td>
                             <div>
-                                <input type="checkbox" id="customCheck1E" checked>
+                                <input type="checkbox" id="customCheck1E">
                                 <label for="customCheck1E" style="margin-left: 2px;">Y/N</label>
                             </div>
                         </td>
                         <td>Spouse Question 1</td>
                         <td>
                             <div>
-                                <input type="checkbox" id="customCheck1S" checked>
+                                <input type="checkbox" id="customCheck1S">
                                 <label for="customCheck1S" style="margin-left: 2px;">Y/N</label>
                             </div>
                         </td>
                         <td>Child First Name 01</td>
                         <td>
                             <div>
-                                <input type="checkbox" id="customCheck1C" checked>
+                                <input type="checkbox" id="customCheck1C">
                                 <label for="customCheck1C" style="margin-left: 2px;">Y/N</label>
                             </div>
                         </td>
@@ -49,21 +56,21 @@
                         <td>Employee Question 2</td>
                         <td>
                             <div>
-                                <input type="checkbox" id="customCheck2E" checked>
+                                <input type="checkbox" id="customCheck2E">
                                 <label for="customCheck2E" style="margin-left: 2px;">Y/N</label>
                             </div>
                         </td>
                         <td>Spouse Question 2</td>
                         <td>
                             <div>
-                                <input type="checkbox" id="customCheck2S" checked>
+                                <input type="checkbox" id="customCheck2S">
                                 <label for="customCheck2S" style="margin-left: 2px;">Y/N</label>
                             </div>
                         </td>
                         <td>Child Last Name 01</td>
                         <td>
                             <div>
-                                <input type="checkbox" id="customCheck2C" checked>
+                                <input type="checkbox" id="customCheck2C">
                                 <label for="customCheck2C" style="margin-left: 2px;">Y/N</label>
                             </div>
                         </td>
@@ -73,21 +80,21 @@
                         <td>Employee Question 3A</td>
                         <td>
                             <div>
-                                <input type="checkbox" id="customCheck1E" checked>
+                                <input type="checkbox" id="customCheck1E">
                                 <label for="customCheck1E" style="margin-left: 2px;">Y/N</label>
                             </div>
                         </td>
                         <td>Spouse Question 3A</td>
                         <td>
                             <div>
-                                <input type="checkbox" id="customCheck1S" checked>
+                                <input type="checkbox" id="customCheck1S">
                                 <label for="customCheck1S" style="margin-left: 2px;">Y/N</label>
                             </div>
                         </td>
                         <td>Child Date of Birth 01</td>
                         <td>
                             <div>
-                                <input type="checkbox" id="customCheck1C" checked>
+                                <input type="checkbox" id="customCheck1C">
                                 <label for="customCheck1C" style="margin-left: 2px;">Y/N</label>
                             </div>
                         </td>
@@ -97,21 +104,21 @@
                         <td>Employee Question 3B</td>
                         <td>
                             <div>
-                                <input type="checkbox" id="customCheck1E" checked>
+                                <input type="checkbox" id="customCheck1E">
                                 <label for="customCheck1E" style="margin-left: 2px;">Y/N</label>
                             </div>
                         </td>
                         <td>Spouse Question 3B</td>
                         <td>
                             <div>
-                                <input type="checkbox" id="customCheck1S" checked>
+                                <input type="checkbox" id="customCheck1S">
                                 <label for="customCheck1S" style="margin-left: 2px;">Y/N</label>
                             </div>
                         </td>
                         <td>Child Gender 01</td>
                         <td>
                             <div>
-                                <input type="checkbox" id="customCheck1C" checked>
+                                <input type="checkbox" id="customCheck1C">
                                 <label for="customCheck1C" style="margin-left: 2px;">Y/N</label>
                             </div>
                         </td>
@@ -121,14 +128,14 @@
                         <td>Employee Question 3C</td>
                         <td>
                             <div>
-                                <input type="checkbox" id="customCheck1E" checked>
+                                <input type="checkbox" id="customCheck1E">
                                 <label for="customCheck1E" style="margin-left: 2px;">Y/N</label>
                             </div>
                         </td>
                         <td>Spouse Question 3C</td>
                         <td>
                             <div>
-                                <input type="checkbox" id="customCheck1S" checked>
+                                <input type="checkbox" id="customCheck1S">
                                 <label for="customCheck1S" style="margin-left: 2px;">Y/N</label>
                             </div>
                         </td>
@@ -140,14 +147,14 @@
                         <td>Employee Question 4</td>
                         <td>
                             <div>
-                                <input type="checkbox" id="customCheck1E" checked>
+                                <input type="checkbox" id="customCheck1E">
                                 <label for="customCheck1E" style="margin-left: 2px;">Y/N</label>
                             </div>
                         </td>
                         <td>Spouse Question 4</td>
                         <td>
                             <div>
-                                <input type="checkbox" id="customCheck1S" checked>
+                                <input type="checkbox" id="customCheck1S">
                                 <label for="customCheck1S" style="margin-left: 2px;">Y/N</label>
                             </div>
                         </td>
@@ -159,14 +166,14 @@
                         <td>Employee Question 5</td>
                         <td>
                             <div>
-                                <input type="checkbox" id="customCheck1E" checked>
+                                <input type="checkbox" id="customCheck1E">
                                 <label for="customCheck1E" style="margin-left: 2px;">Y/N</label>
                             </div>
                         </td>
                         <td>Spouse Question 5</td>
                         <td>
                             <div>
-                                <input type="checkbox" id="customCheck1S" checked>
+                                <input type="checkbox" id="customCheck1S">
                                 <label for="customCheck1S" style="margin-left: 2px;">Y/N</label>
                             </div>
                         </td>
