--- a/ClientApp/src/app/custom-bulk-template/custom-bulk-template.component.css
+++ b/ClientApp/src/app/custom-bulk-template/custom-bulk-template.component.css
@@ -50,4 +50,19 @@
   .fields-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
-  
+  .accordion .card-header:after {
+    font-family: 'FontAwesome' ;  
+    content: "\f068" ;
+    float: left;
+    padding-right: 10px; 
+  }
+  .accordion .card-header.collapsed:after {
+    /* symbol for "collapsed" panels */
+    content: "\f067"; 
+  }
+  .accordion .card-header{
+      background-color: #cff6cf;
+  }
+  .accordion .card-header.collapsed{
+    background-color: #cfe5cf
+}
