--- a/ClientApp/src/app/custom-bulk-update/custom-bulk-update.component.css
+++ b/ClientApp/src/app/custom-bulk-update/custom-bulk-update.component.css
@@ -19,3 +19,15 @@ table {
   }
   
 
+
+  .select-dropdown {
+    width: 100%;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    padding: .375rem 1.75rem .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    height: 40px;
+  }
