--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -151,7 +151,7 @@
               <div id="collapseThree" class="collapse" data-parent="#accordion" >
                   <div class="card-body">
                   
-                    <app-accident [lookupSitusState] = "lookupSitusStateValue"></app-accident>
+                    <app-accident [lookupValue] = "lookupSitusStateValue" [dateValue]="dateChange"></app-accident>
                   </div>
               </div>
               <div class="card-header collapsed mb-2" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
