--- a/ClientApp/src/app/basic-group-life/basic-group-life.component.html
+++ b/ClientApp/src/app/basic-group-life/basic-group-life.component.html
@@ -1,25 +1,30 @@
 <div class="container">
+  <div style=" margin-left: 15px;">
     <div class="row">
+      <app-radio-button></app-radio-button>
       <div class="col-3">
-        <span class="label label-default">Basic Life Effective Date</span>
-        <input type="date" [min] = "minDate" class="form-control mb-2 " style="width: 100%;" placeholder="Basic Life Effective Date">
+        <span class="label label-default">Group Effective Date</span>
+        <input type="date" [value]="dateValue" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
+          placeholder="Group Effective Date">
+
       </div>
+      <app-radio-button></app-radio-button>
       <div class="col-3">
-        <span class="label"> Situs State</span>
-        <select class="form-control" id="inlineFormCustomSelectPref">
-          <option hidden disabled selected value> -- select Situs State -- </option>
-        <option selected *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">{{ lookUpDataSitusState }}</option>
-          
+        <span class="label label-default">Sitius State</span>
+        <select class="form-control" [value]="lookupValue">
+          <!-- <option value="0" selected="selected">{{ lookupValue }}</option> -->
+          <option  *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">
+            {{lookUpDataSitusState.state}}</option>
+
         </select>
-        <!-- <div *ngIf="lookupSitusState == ''">
-          <span style="color: red;">  <small><strong>Select Situs State!</strong></small></span>
-        </div> -->
+        
       </div>
-      <div class="col-3" style="margin-top: 18px;">
-        <app-radio-button></app-radio-button>  
+      <div class="col-3 mt-4">
+        <button class="btn btn-primary" type="submit">Reset Form </button>
       </div>
-      
     </div>
+  </div>
+
 
     <div class="row">
       <div class="col-3">
@@ -28,16 +33,23 @@
         placeholder="Employee Face Amount">
     </div> 
 
-        <div class="col-3">
+    <div class="col-3 mb-2">
+      <span class="label">AD&D Rider </span>
+      <select class="form-control">
+          <option selected value="Y">Y</option>
+          <option value="N">N</option>
+      </select>
+  </div>
+        <!-- <div class="col-3">
             <span class="label">Spouse Face Amount </span>
             <input type="number" class="form-control mb-2 " style="width: 100%;" 
             placeholder="Spouse Face Amount">
-        </div>
-        <div class="col-3">
+        </div> -->
+        <!-- <div class="col-3">
           <span class="label">Child Face Amount </span>
           <input type="number" class="form-control mb-2 " style="width: 100%;" 
             placeholder="Child Face Amount">
-      </div>
+      </div> -->
                         
       </div>
       <app-agent-setup></app-agent-setup>
