--- a/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
+++ b/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
@@ -1,30 +1,36 @@
 
     <div class="container">
-      <div class="row">
-        <div class="col-4">
-          <span class ="label label-default"> Effective Date
-            </span>
-            <input type="date" [min]="minDate" class="form-control mb-2 " style="width: 100%;" id=""
-              placeholder="Hospital Indemnity Effective Date">
-        
+    
+        <div class="row">
+          <app-radio-button></app-radio-button>
+          <div class="col-3">
+            <span class="label label-default">Group Effective Date</span>
+            <input type="date" [value]="dateValue" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
+              placeholder="Group Effective Date">
+  
+          </div>
+          <app-radio-button></app-radio-button>
+          <div class="col-3">
+            <span class="label label-default">Sitius State</span>
+            <select class="form-control" [value]="lookupValue">
+              <!-- <option value="0" selected="selected">{{ lookupValue }}</option> -->
+              <option  *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">
+                {{lookUpDataSitusState.state}}</option>
+  
+            </select>
+          
+          </div>
+          <div class="col-3 mt-4">
+            <button class="btn btn-primary" type="submit">Reset Form </button>
+          </div>
         </div>
           
-            <div class="col-3">
-              <span class ="label label-default">  Situs State</span>
-              <select class="form-control" id="inlineFormCustomSelectPref">
-                <option hidden disabled selected value> -- select Situs State -- </option>
-        <option selected *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">{{ lookUpDataSitusState }}</option>
-              </select> 
-              <!-- <div *ngIf="lookupSitusState == ''">
-                <span style="color: red;">  <small><strong>Select Situs State!</strong></small></span>
-              </div> -->
-            </div>
-            <div class="col">
-              <app-radio-button></app-radio-button>
-            </div>
-        </div>
+           
+          
+        <div class="mt-4">
   
         <app-agent-setup></app-agent-setup>
+        </div>
     </div>
     
 
