--- a/ClientApp/src/app/vol-group-life/vol-group-life.component.html
+++ b/ClientApp/src/app/vol-group-life/vol-group-life.component.html
@@ -1,68 +1,145 @@
-<div class="container">
-    <div class="row">
-        <div class="col-3">
-            <span class="label label-default">VGL Effective Date</span>
-            <input type="date" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
-                placeholder="VGL Effective Date">
+<div class="container" style="width: 100%;">
+
+    <form>
+      <div style=" margin-left: 15px;">
+        <div class="row">
+          <app-radio-button></app-radio-button>
+          <div class="col-3">
+            <span class="label label-default">Group Effective Date</span>
+            <input type="date" [value]="dateValue" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
+              placeholder="Group Effective Date">
+  
+          </div>
+          <app-radio-button></app-radio-button>
+          <div class="col-3">
+            <span class="label label-default">Sitius State</span>
+            <select class="form-control" [value]="lookupValue">
+              <!-- <option value="0" selected="selected">{{ lookupValue }}</option> -->
+              <option  *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">
+                {{lookUpDataSitusState.state}}</option>
+  
+            </select>
+            <!-- <div *ngIf="lookupValue == ''">
+          <span style="color: red;">  <small><strong>Select Payment Mode !</strong></small></span>
+        </div> -->
+          </div>
+          <div class="col-3 mt-4">
+            <button class="btn btn-primary" type="submit">Reset Form </button>
+          </div>
         </div>
-        <div class="col-3">
-            <span class="label"> Situs State</span> 
-            <select class="form-control" id="inlineFormCustomSelectPref">
-                <option hidden disabled selected value> -- select Situs State -- </option>
-        <option selected *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">{{ lookUpDataSitusState }}</option>
-            </select> 
-            <!-- <div *ngIf="lookupSitusState == ''">
-                <span style="color: red;"> <small><strong> Situs State!</strong></small></span>
-            </div> -->
-        </div>
-        <div class="col">
-            <app-radio-button></app-radio-button>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-3 mb-2">
+      </div>
+  
+      <div class="container">
+  
+        <div class="row" style="margin-top: 10px;">
+  
+          <app-radio-button></app-radio-button>
+          <div class="col-3">
+  
+            <span class="label label-default">Employee GI Amount Max</span>
+  
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Employee GI Amount Max">
+          </div>
+  
+         
+          <!-- <div class="col-3">
+            <span class="label label-default">Employee QI Amount Max</span>
+  
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Employee QI Amount Max">
+          </div> -->
+          <div class="col-3">
+            <span class="label label-default">Employee Max Amount</span>
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Employee Max Amount">
+          </div>
+          
+          <div class="col-3 mb-2">
             <span class="label">AD&D Rider </span>
             <select class="form-control">
                 <option selected value="Y">Y</option>
                 <option value="N">N</option>
             </select>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-3">
-            <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
-            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Employee GI Amount">
+  
+        
         </div>
-        <div class="col-3">
-            <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
-            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Employee Max Amount">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-3">
-            <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
-            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Spouse GI Amount">
-        </div>
-        <div class="col-3">
-            <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
+  
+        <div class="row mt-2">
+          <app-radio-button></app-radio-button>
+          <div class="col-3">
+            <span class="label label-default">Spouse GI Amount Max</span>
+  
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Spouse GI Amount Max
+              ">
+          </div>
+          <!-- <div class="col-3">
+            <span class="label label-default">Spouse QI Amount Max</span>
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Spouse QI Amount Max">
+          </div> -->
+          <div class="col-3">
+            <span class="label label-default">Spouse Max Amount</span>
             <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Spouse Max Amount">
+          </div>
+  
         </div>
-    </div>
-    <div class="row">
-        <div class="col-3">
-            <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
-            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Child GI Amount">
-        </div>
-        <div class="col-3">
-            <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
+        <div class="row mt-2">
+          <app-radio-button></app-radio-button>
+          <div class="col-3">
+            <span class="label label-default">Child GI Amount Max</span>
+  
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Child GI Amount Max">
+          </div>
+          <!-- <div class="col-3">
+            <span class="label label-default">Child QI Amount Max</span>
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Child QI Amount Max">
+          </div> -->
+          <div class="col-3">
+            <span class="label label-default">Child Max Amount</span>
             <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Child Max Amount">
+          </div>
+  
         </div>
-    </div>
-    <div class="row">
-        <div class="col-3">
-            <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+  
+  
+  
+        <div class="row mt-2">
+          <app-radio-button></app-radio-button>
+          <div class="col-3">
+  
+            <span class="label label-default">Open Enrollment GI</span>
             <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Open Enrollment GI">
+          </div>
+  
+          <app-radio-button></app-radio-button>
+          <div class="col-3">
+            <span class="label label-default">Plan code manual Entry</span>
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Plan code manual Entry">
+          </div>
+  
         </div>
+  
+        <div class="row mt-2">
+          <app-radio-button></app-radio-button>
+          <div class="col-3">
+  
+            <span class="label label-default">User Token</span>
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="User Token">
+          </div>
+  
+          <app-radio-button></app-radio-button>
+          <div class="col-3">
+            <span class="label label-default">Case Token</span>
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Case Token">
+          </div>
+  
+        </div>
+  
+        
+  
+  
+      </div>
+      <div class="mt-4">
+        <app-agent-setup></app-agent-setup>
+      </div>
+  
+    </form>
     </div>
-</div>
-<app-agent-setup></app-agent-setup>
